<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/doctorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_doctor"/>

    <Spinner
        android:id="@+id/doctorSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/doctor_array"
        />
    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        />
    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"/>
    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_time"/>
    <Button
        android:id="@+id/timeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_time"
        />
    <Button
        android:id="@+id/sheduleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shedule_appointment"
        />


</LinearLayout>